[package]
name = "ultrastar-fs"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

[features]
default = ["mount", "cover"]
cover = ["image", "diesel", "ultrastar-txt", "tempfile"]
mount = ["fuse", "fuse_mt"]

[dependencies]
anyhow = "1"
clap = "2.33.1"
chrono = "0.4"
diesel = { version = "1.4.5", optional = true, default-features = false, features = ["sqlite"] }
env_logger = "0.7.1"
image = { version = "0.23.8", optional = true, default-features = false, features = ["png", "jpeg", "jpeg_rayon", "bmp", "gif", "tga", "tiff", "pnm"] }
indicatif = "0.15.0"
libc = "0.2"
log = "0.4"
walkdir = "2.3.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
time = "0.1"
zip = "0.5.6"
fuse_mt = { version = "0.5.0", git = "https://github.com/wfraser/fuse-mt.git", optional = true }
fuse = { version = "0.3.1", optional = true }
ultrastar-txt = { version = "0.1.3", optional = true }
tempfile = { version = "3.1.0", optional = true }